fix select alignment on FF

--- a/IPython/frontend/html/notebook/static/notebook/less/toolbar.less
+++ b/IPython/frontend/html/notebook/static/notebook/less/toolbar.less
@@ -6,12 +6,13 @@
         height: @baseLineHeight + 6px;
         vertical-align:middle;
         margin-right:2px;
-        margin-bottom:0;
+        margin-bottom:0px;
         display: inline;
         font-size: 92%;
         margin-left:0.3em;
         margin-right:0.3em;
         padding: 0px;
+        padding-top: 3px;
     }
     .btn {
         padding: 2px 8px;
